BRC_deploy/deployment-worker-push.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-push
  template:
    metadata:
      labels:
        app: worker-push
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: worker-push
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: In
                values:
                - worker-push
      containers:
        - name: worker
          image: MY_WORKER_IMAGE:latest # Replace
