BRC_deploy/deployment-worker-upgrade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-upgrade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-upgrade
  template:
    metadata:
      labels:
        app: worker-upgrade
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: worker-upgrade
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: In
                values:
                - worker-upgrade
      containers:
        - name: worker
          image: MY_WORKER_IMAGE:latest # Replace
